--- a/charles.wong/src/main/resources/messages_de.properties
+++ b/charles.wong/src/main/resources/messages_de.properties
@@ -1,11 +1,11 @@
 # General
 app.title=Anderlechtse Gazette
-app.about=Über
+app.about=\u00DCber
 
 # Navigation
 nav.home=Startseite
 nav.newArticle=Neuer Artikel
-nav.about=Über
+nav.about=\u00DCber
 
 # Article
 article.title=Titel
@@ -17,8 +17,8 @@ article.email=E-Mail
 article.list=Liste der Artikel
 article.details=Details
 article.createNew=Neuen Artikel Erstellen
-article.addNew=Neuen Artikel Hinzufügen
-article.delete=Löschen
+article.addNew=Neuen Artikel HinzufÃ¼gen
+article.delete=L\u00F6schen
 article.actions=Aktionen
 
 # Form Labels
@@ -36,13 +36,13 @@ error.nameRequired=Name ist erforderlich
 error.categoryRequired=Kategorie ist erforderlich
 error.contentLength=Inhalt muss mindestens 10 Zeichen lang sein
 error.reporterRequired=Reportername ist erforderlich
-error.email=E-Mail muss gültig sein
+error.email=E-Mail muss g\u00FCltig sein
 
 # Footer
 footer.copy=Copyright 2024 De Anderlechtse Gazet
 
 # About Page
-about.title=Über Die Anderlechtse Gazet
+about.title=\u00DCber Die Anderlechtse Gazet
 about.description=Lorem ipsum dolor sit amet...
 about.address=Adresse:
 about.contact=Kontakt:
