--- a/charles.wong/src/main/resources/messages_fr.properties
+++ b/charles.wong/src/main/resources/messages_fr.properties
@@ -1,22 +1,22 @@
 # General
 app.title=Gazette d'Anderlecht
-app.about=À propos
+app.about=\u00C0 propos
 
 # Navigation
 nav.home=Accueil
 nav.newArticle=Nouvel Article
-nav.about=À propos
+nav.about=\u00C0 propos
 
 # Article
 article.title=Titre
 article.name=Nom
-article.category=Catégorie
+article.category=Cat\u00E9gorie
 article.content=Contenu
 article.reporter=Nom du reporter
 article.email=E-mail
 article.list=Liste des Articles
-article.details=Détails
-article.createNew=Créer Nouvel Article
+article.details=DÃ©tails
+article.createNew=Cr\u00E9er Nouvel Article
 article.addNew=Ajouter Nouvel Article
 article.delete=Supprimer
 article.actions=Actions
@@ -24,7 +24,7 @@ article.actions=Actions
 # Form Labels
 form.label.title=Titre:
 form.label.name=Nom:
-form.label.category=Catégorie:
+form.label.category=Cat\u00E9gorie:
 form.label.content=Contenu:
 form.label.reporter=Nom du reporter:
 form.label.email=E-mail:
@@ -33,19 +33,19 @@ form.submit=Soumettre:
 # Errors
 error.titleRequired=Le titre est obligatoire
 error.nameRequired=Le nom est obligatoire
-error.categoryRequired=La catégorie est obligatoire
-error.contentLength=Le contenu doit contenir au moins 10 caractères
+error.categoryRequired=La cat\u00E9gorie est obligatoire
+error.contentLength=Le contenu doit contenir au moins 10 caract\u00E8res
 error.reporterRequired=Le nom du reporter est obligatoire
-error.email=E-mail doit être valide
+error.email=E-mail doit \u00EAtre valide
 
 # Footer
 footer.copy=Copyright 2024 De Anderlechtse Gazet
 
 # About Page
-about.title=À propos de la Gazette d'Anderlecht
+about.title=\u00C0 propos de la Gazette d'Anderlecht
 about.description=Lorem ipsum dolor sit amet...
 about.address=Adresse:
 about.contact=Contact:
-about.phone=Téléphone:
+about.phone=TÃ©lÃ©phone:
 about.email=E-mail:
 about.company=Entreprise
